samples/_failures_safe/1761246872_ce5cc3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24371a4f.c: In function ‘main’:
./samples/SAFE/__tmp_24371a4f.c:146:9: error: expected declaration or statement at end of input
  146 |         if (add_edge(&graph, from, to, weight) == -1) {
      |         ^~
./samples/SAFE/__tmp_24371a4f.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_24371a4f.c:146:9: error: expected declaration or statement at end of input
